@@ -1,3 +1,8 @@
+2004-03-24  Mark McLoughlin  <mark@skynet.ie>
+	
+	* gconf/gconf-database.c: (impl_ConfigDatabase_set): don't
+	convert the value into a string and then do nothing with it.
+	
 2004-03-30  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: bump to 2.7.1. 2.6.x development is on
